--- a/style.css
+++ b/style.css
@@ -93,7 +93,7 @@ body {
 
 /* Footer */
 .footer {
-    background: #1e3c72;
+    background: #000000;
     color: #fff;
     text-align: center;
     padding: 1rem;
